--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-leaflet": "^5.0.0",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.18"
   },
